--- a/css/senior.css
+++ b/css/senior.css
@@ -1,6 +1,24 @@
 .info{
     margin-bottom: 15px;
 }
-li{
-    padding-bottom: 5px;
+.info p{
+    font-size: 30px;
+}
+.info li{
+    font-size:25px;
+    
+    line-height: 35px;
+    text-align: left;
+    margin-bottom: 6px;
+}
+.text p{
+    font-size:25px;
+    text-align: left;
+}
+.text li{
+    line-height: 35px;
+    white-space: pre-wrap;
+    font-size: 22px;
+    margin-bottom: 15px;
+    text-align: left;
 }
