--- a/css/nomalize.css
+++ b/css/nomalize.css
@@ -1,17 +1,28 @@
-body{
+body {
   /* background-color: #E8F5FF; */
   box-sizing: border-box;
-  min-height : 100vh;
+  min-height: 100vh;
   width: 100%;
-  width: 1200px;
+  width: 1000px;
   margin-top: 40px;
-  margin-left: auto;    
+  margin-left: auto;
   margin-right: auto;
 }
-span{
-  padding: 5px 0;
-  display: block;
+
+h1 {
+  margin: 0;
+  padding: 0;
 }
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+span {
+  font-weight: bold;
+}
+
 ul,
 li {
   margin: 0;
@@ -29,8 +40,4 @@ a {
 img {
   width: 200px;
   height: 200px;
-}
-
-p{
-  font-weight: bold;
 }
