--- a/css/home.css
+++ b/css/home.css
@@ -38,7 +38,7 @@
 }
 
 .introduce{
-    padding-top: 20px;
+    padding-top: 10px;
     height: 245px;
     float: left;
 }
@@ -55,7 +55,7 @@
     content: "";
     flex-grow: 1;
     background: #3468C0;
-    height: 1px;
+    height: 1.5px;
     font-size: 0px;
     line-height: 0px;
     margin: 0px 10px;
@@ -92,16 +92,24 @@
     /* border: 3px solid #3468C0; */
     border-radius: 25px;
 }
-.connect p{
+.connect h2{
+    margin: 0 0 10px 0;
     color: #3468C0;
-    margin-bottom: 10px;
     font-size: 18px;
 }
 .connect span {
-    color: #86A7FC;
+    border-radius: 5px;
+    padding: 2px 2px;
+    width: min-content;
+    background-color: #3468C0;
+    color: #FFDD95;
+    font-size: 18px;
     padding-bottom: 5px;
 }
-
+.connect p{
+    margin: 2px 0;
+    color: #3468C0;
+}
 .connect img {
     margin-bottom: -5px;
     margin-right: 10px;
@@ -121,7 +129,7 @@
     flex-basis: 100%;
     align-items: center;
     font-size: 20px;
-    width: 17.5em;
+    width: 20.5em;
 }
 
 .skill_top::after {
@@ -138,7 +146,7 @@
     background-color: #86A7FC;
     height:min-content;
     text-align: left;
-    width: 350px;
+    width: 400px;
     margin: 10px 0;
     padding: 15px 5px;
     border-radius: 25px;
@@ -191,7 +199,7 @@
 .main li {
     text-align: left;
     white-space: pre-line;
-    padding: 30px 30px;
+    padding: 20px 30px 30px 30px;
     margin: 0 auto;
     height: 230 px;
     border-radius: 20px;
@@ -203,12 +211,17 @@
 .main li:hover {
     background-color: rgba(0, 0, 0, 0.05);
 }
-
+.main h1{
+    margin-left: 10px;
+    font-size: 35px;
+    color: #3468C0;
+}
 .main h2 {
     font-weight: normal;
     font-size: 20px;
     padding: 0;
     margin: 10px 0 -10px 0;
+    line-height: 30px;
 }
 
 .main_head{
