--- a/css/senior.css
+++ b/css/senior.css
@@ -1,34 +1,76 @@
 .info {
+    float: left;
+    position: fixed;
     text-align: center;
+    width: 220px;
+    padding: 10px 10px 30px 10px;
+    height: fit-content;
     white-space: pre-line;
-    border: 1px solid grey;
     border-radius: 20px;
-    padding:15px 0;
+    background-color: #E8F5FF;
 }
 
 .info h1 {
-    font-size: 40px;
+    font-size: 20px;
     margin-bottom: 5px;
 }
 
 .info p {
-    margin-top: -20px;
-    margin-left: 170px;
-    text-align: left;
-    font-size: 20px;
     line-height: 35px;
+    display: inline;
+    padding:0 5px;
+    font-size: 15px;
 }
-
+.info img{
+        background-color: white;
+        margin-left: 10px;
+        padding: 5px 5px;
+        width: 40px;
+        height: 40px;
+        border-radius: 10px;
+        object-fit: contain;
+}
 .info hr {
     height: 5px;
     border: 0;
-    background-color: grey;
+    background-color: #3468C0;
     margin: 0;
     padding: 0;
 }
-
+.info_num1{
+    font-size: 12px;
+    background-color: #5AD2FF;
+    border-radius: 100%;
+    width: 20px;
+    height: 20px;
+    margin: auto 0;
+    align-items: center;
+    justify-content: center;
+    display: inline-flex;
+}
+.info_num2{
+    font-size: 12px;
+    background-color:#9BC3FF;
+    border-radius: 100%;
+    width: 20px;
+    height: 20px;
+    align-items: center;
+    justify-content: center;
+    display: inline-flex;
+}
+.info_num3{
+    font-size: 12px;
+    background-color: #D5C2EE;
+    border-radius: 100%;
+    width: 20px;
+    height: 20px;
+    align-items: center;
+    justify-content: center;
+    display: inline-flex;
+}
 .text {
-    width:750px;
+    float: right;
+    width:730px;
     margin: 0 auto;
     white-space: pre-line;
     line-height: 35px;
@@ -41,9 +83,10 @@
 }
 
 .text p {
-    padding:0 40px;
-    text-align: center;
-    position: relative;
+    background-color: #E8F5FF;
+    padding:0 20px 0 40px;
+    text-align: left;
+    border-radius: 15px;
     font-size: 16px;
     margin-top: -23px;
 }
@@ -51,7 +94,7 @@
 .text hr {
     height: 5px;
     border: 0;
-    background-color: grey;
+    background-color: #3468C0;
     margin: 0;
     padding: 0;
 }
@@ -66,30 +109,39 @@
 .number_1{
     background-color: #5AD2FF;
     border-radius: 100%;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
     float: left;
+    left:5px;
+    top:15px;
+    position: relative;
 }
 .number_2{
     background-color:#9BC3FF;
     border-radius: 100%;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
     float: left;
+    left:5px;
+    top:15px;
+    position: relative;
 }
 .number_3{
     background-color: #D5C2EE;
     border-radius: 100%;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
     float: left;
+    left:5px;
+    top:15px;
+    position: relative;
 }
