--- a/css/home.css
+++ b/css/home.css
@@ -8,17 +8,13 @@
     color: #12372A;
     font-size: 30px;
 } */
-.main-top {
-    color: #3468C0;
-    font-weight: bold;
-    display: flex;
-    flex-basis: 100%;
-    align-items: center;
-    font-size: 40px;
-    margin: 8px 0px;
+.headfix{
+    display: block;
+    background-color: white;
+    width: max-content;
 }
 
-.main-top::after {
+/* .main-top::after {
     content: "";
     flex-grow: 1;
     background: #3468C0;
@@ -26,23 +22,26 @@
     font-size: 0px;
     line-height: 0px;
     margin: 0px 16px;
-}
+} */
 
 .hello {
     display: inline-block;
     font-size: 23px;
     line-height: 40px;
     padding: 20px 0;
-    margin: 10px 0;
+    margin: 80px 0 0 0;
     width: 50em;
 }
 
 .introduce{
-    padding-top: 10px;
+    background-color: #E8F5FF;
+    border-radius: 10px;
+    padding: 20px 15px 15px 15px;
     height: min-content;
     float: left;
 }
 .introduce_top{
+    margin-left: 5px;
     color: #3468C0;
     font-weight: bold;
     display: flex;
@@ -51,7 +50,7 @@
     font-size: 20px;
     width: 19em;
 }
-.introduce_top::after {
+/* .introduce_top::after {
     content: "";
     flex-grow: 1;
     background: #3468C0;
@@ -59,17 +58,19 @@
     font-size: 0px;
     line-height: 0px;
     margin: 0px 10px;
-}
+} */
 .introduce_bottom{
+    margin-left: 10px;
     color: #3468C0;
     font-weight: bold;
     display: inline-flex;
+    margin-bottom: 5px;
     flex-basis: 100%;
     align-items: center;
     font-size: 20px;
     width: 19em;
 }
-.introduce_bottom:after {
+/* .introduce_bottom:after {
     content: "";
     flex-grow: 1;
     background: #3468C0;
@@ -77,7 +78,7 @@
     font-size: 0px;
     line-height: 0px;
     margin: 0px 10px;
-}
+} */
 .introduce h2{
     margin: 10px 20px;
     color: #3468C0;
@@ -90,34 +91,33 @@
     font-size: 12px;
     color: gray;
 }
-.connect span {
+.contact span {
+    color: #86A7FC;
     border-radius: 5px;
     padding: 2px 2px;
     width: min-content;
-    background-color: #3468C0;
-    color: #FFDD95;
     font-size: 18px;
     padding-bottom: 5px;
 }
-.connect p{
-    margin: 2px 0;
+.contact p{
+    margin: 5px 20px;
     color: #3468C0;
-}
-.connect img {
-    margin-bottom: -5px;
-    margin-right: 10px;
-    width: 20px;
-    height: 20px;
+    font-size: 16px;
+    white-space: pre-line;
 }
 .contact{
-    padding: 10px 0 0 0;
+    background-color: #E8F5FF;
+    border-radius: 10px;
+    padding: 20px 15px;
     margin: 0px 10px;
     float: right;
-    width: min-content;
+    height: 100px;
+    width: fit-content;
 }
 .skill{
+    display: block;
     width: min-content;
-    height: 275px;
+    margin: 20px 0 0 0;
     padding:0;
 }
 .skill_top{
@@ -141,7 +141,7 @@
 }
 
 .skill_block {
-    background-color: #86A7FC;
+    background-color: #E8F5FF;
     height:min-content;
     text-align: left;
     width: 400px;
@@ -189,7 +189,6 @@
     margin:8px 20px;
 }
 .main {
-    float: left;
     margin: 20px 0;
     width: 100%;
 }
@@ -202,7 +201,6 @@
     height: 230 px;
     border-radius: 20px;
     margin-bottom: 15px;
-    display: block;
     border: 2px solid #86A7FC;
 }
 
