--- a/css/nomalize.css
+++ b/css/nomalize.css
@@ -1,11 +1,22 @@
-body {
+html {
+  
+}
+header{
+  width: 100%;
+  height: 80px;
+  position: fixed;
+  background-color: white;
+  color: #3468C0;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  font-size: 40px;
+  border-bottom: 1px solid gray;
+}
+body{
   box-sizing: border-box; 
   min-height: 100vh;
-  width: 100%;
-  width: 1000px;
-  margin-top: 40px;
-  margin-left: auto;
-  margin-right: auto;
+  margin:0 auto;
 }
 
 h1 {
