--- a/css/home.css
+++ b/css/home.css
@@ -25,12 +25,13 @@
 } */
 
 .hello {
-    display: inline-block;
+    justify-content: space-between;
+    text-align: center;
+    align-items: center;
     font-size: 23px;
     line-height: 40px;
-    padding: 20px 0;
-    margin: 80px 0 0 0;
-    width: 50em;
+    padding: 80px 0;
+    width: 1080px;
 }
 
 .introduce{
