--- a/css/home.css
+++ b/css/home.css
@@ -8,11 +8,6 @@
     color: #12372A;
     font-size: 30px;
 } */
-.headfix{
-    display: block;
-    background-color: white;
-    width: max-content;
-}
 
 /* .main-top::after {
     content: "";
@@ -25,23 +20,34 @@
 } */
 
 .hello {
+    display: block;
     justify-content: space-between;
     text-align: center;
     align-items: center;
     font-size: 23px;
     line-height: 40px;
-    padding: 80px 0;
+    padding: 90px 0 30px 0;
     width: 1080px;
+    margin: auto;
 }
-
-.introduce{
+.intro_contact{
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    margin: auto;
+}
+.introduce {
+    box-shadow: 1px 1px 3px 0 #E2e2e2;
+    display: inline-block;
     background-color: #E8F5FF;
     border-radius: 10px;
     padding: 20px 15px 15px 15px;
     height: min-content;
-    float: left;
+    width: min-content;
+    margin-right: 40px;
 }
-.introduce_top{
+
+.introduce_top {
     margin-left: 5px;
     color: #3468C0;
     font-weight: bold;
@@ -51,6 +57,7 @@
     font-size: 20px;
     width: 19em;
 }
+
 /* .introduce_top::after {
     content: "";
     flex-grow: 1;
@@ -60,7 +67,7 @@
     line-height: 0px;
     margin: 0px 10px;
 } */
-.introduce_bottom{
+.introduce_bottom {
     margin-left: 10px;
     color: #3468C0;
     font-weight: bold;
@@ -71,6 +78,7 @@
     font-size: 20px;
     width: 19em;
 }
+
 /* .introduce_bottom:after {
     content: "";
     flex-grow: 1;
@@ -80,18 +88,20 @@
     line-height: 0px;
     margin: 0px 10px;
 } */
-.introduce h2{
+.introduce h2 {
     margin: 10px 20px;
     color: #3468C0;
     font-size: 18px;
     white-space: pre-line;
 }
-.introduce h3{
+
+.introduce h3 {
     padding: 0;
     margin: 10px 20px;
     font-size: 12px;
     color: gray;
 }
+
 .contact span {
     color: #86A7FC;
     border-radius: 5px;
@@ -100,35 +110,39 @@
     font-size: 18px;
     padding-bottom: 5px;
 }
-.contact p{
+
+.contact p {
     margin: 5px 20px;
     color: #3468C0;
     font-size: 16px;
     white-space: pre-line;
 }
-.contact{
+
+.contact {
+    box-shadow: 1px 1px 3px 0 #E2e2e2;
+    display: inline-block;
     background-color: #E8F5FF;
     border-radius: 10px;
     padding: 20px 15px;
-    margin: 0px 10px;
-    float: right;
-    height: 100px;
     width: fit-content;
+    margin: auto;
 }
-.skill{
+
+.skill {
     display: block;
     width: min-content;
-    margin: 20px 0 0 0;
-    padding:0;
+    margin: 20px auto;
+    padding: 0;
 }
-.skill_top{
+
+.skill_top {
     color: #3468C0;
     font-weight: bold;
     display: flex;
     flex-basis: 100%;
     align-items: center;
     font-size: 20px;
-    width: 20.5em;
+    width: 45em;
 }
 
 .skill_top::after {
@@ -142,26 +156,26 @@
 }
 
 .skill_block {
+    box-shadow: 1px 1px 3px 0 #E2e2e2;
     background-color: #E8F5FF;
-    height:min-content;
-    text-align: left;
-    width: 400px;
+    height: min-content;
+    text-align: center;
     margin: 10px 0;
     padding: 15px 5px;
     border-radius: 25px;
 }
 
-.skill_block p{
+.skill_block p {
     font-weight: bold;
-    font-size:10px;
-    width:min-content;
+    font-size: 10px;
+    width: min-content;
     display: flex;
     letter-spacing: normal;
     text-align: left;
     border-radius: 5px;
     background-color: #3468C0;
     color: #FFDD95;
-    padding:5px 5px;
+    padding: 5px 5px;
     margin-left: 10px;
     margin-bottom: 10px;
 }
@@ -184,44 +198,49 @@
     margin: 10px 0;
     padding: 0;
 }
-.skill_tree{
+
+.skill_tree {
     text-align: center;
     display: inline-block;
-    margin:8px 20px;
+    margin: 8px 20px;
 }
+
 .main {
-    margin: 20px 0;
-    width: 100%;
+    margin: auto;
+    width: 980px;
 }
 
 .main li {
+    box-shadow: 2px 2px 5px 0 #E2e2e2;
     text-align: left;
     white-space: pre-line;
-    padding: 20px 30px 30px 30px;
+    padding: 10px 30px 20px 30px;
     margin: 0 auto;
-    height: 230 px;
     border-radius: 20px;
     margin-bottom: 15px;
+    color: #5f5f5f;
     border: 2px solid #86A7FC;
 }
 
 .main li:hover {
     background-color: rgba(0, 0, 0, 0.05);
 }
-.main h1{
+
+.main h1 {
     margin-left: 10px;
-    font-size: 35px;
+    font-size: 30px;
     color: #3468C0;
 }
+
 .main h2 {
     font-weight: normal;
-    font-size: 20px;
+    font-size: 18px;
     padding: 0;
-    margin: 10px 0 -10px 0;
+    margin: 8px 0 -10px 0;
     line-height: 30px;
 }
 
-.main_head{
+.main_head {
     margin: 10px 0 20px 0;
     color: #3468C0;
     font-weight: bold;
@@ -231,6 +250,7 @@
     font-size: 20px;
     width: 100%;
 }
+
 .main_head:after {
     content: "";
     flex-grow: 1;
