--- a/css/nomalize.css
+++ b/css/nomalize.css
@@ -3,14 +3,15 @@ html {
 }
 header{
   width: 100%;
-  height: 80px;
+  height: 60px;
+  padding-left: 50px;
   position: fixed;
   background-color: white;
   color: #3468C0;
   display: flex;
   align-items: center;
-  font-size: 40px;
-  border-bottom: 1px solid gray;
+  font-size: 20px;
+  box-shadow:  0 0 5px 0;  
 }
 body{
   box-sizing: border-box; 
