--- a/css/home.css
+++ b/css/home.css
@@ -20,14 +20,11 @@
 } */
 
 .hello {
-    display: block;
-    justify-content: space-between;
-    text-align: center;
-    align-items: center;
-    font-size: 23px;
+    text-align: right;
     line-height: 40px;
-    padding: 90px 0 30px 0;
-    width: 1080px;
+    width: fit-content;
+    font-weight: bold;
+    font-size: 26px;
     margin: auto;
 }
 .intro_contact{
@@ -234,7 +231,7 @@
 
 .main h2 {
     font-weight: normal;
-    font-size: 18px;
+    font-size: 16px;
     padding: 0;
     margin: 8px 0 -10px 0;
     line-height: 30px;
