--- a/css/nomalize.css
+++ b/css/nomalize.css
@@ -2,16 +2,18 @@ html {
   
 }
 header{
-  width: 100%;
-  height: 60px;
-  padding-left: 50px;
-  position: fixed;
+  height: 200px;
   background-color: white;
   color: #3468C0;
   display: flex;
   align-items: center;
-  font-size: 20px;
-  box-shadow:  0 0 5px 0;  
+  box-shadow: 0 0 5px 0;  
+  margin-bottom: 30px;
+  padding-left: 100px;
+}
+header span{
+  color: #5f5f5f;
+  font-size: 30px;
 }
 body{
   box-sizing: border-box; 
