--- a/css/nomalize.css
+++ b/css/nomalize.css
@@ -2,7 +2,7 @@ html {
   
 }
 header{
-  height: 200px;
+  height: 180px;
   background-color: white;
   color: #3468C0;
   display: flex;
@@ -12,8 +12,11 @@ header{
   padding-left: 100px;
 }
 header span{
+  padding-left: 3px;
+  font-weight: 100;
   color: #5f5f5f;
   font-size: 30px;
+  letter-spacing: 10px;
 }
 body{
   box-sizing: border-box; 
